footer fix on mobile?

--- a/components/Footer/footer.module.css
+++ b/components/Footer/footer.module.css
@@ -73,11 +73,12 @@
 }
 
 .sfContent {
-    display: flex;    
+    display: flex;
+
+     
 }
 
 .cgowtLogo{    
-    display: block;
     margin-bottom: 4px;
     margin-left: 5px;
     opacity: 1;
